# JBA_ventures-wagtail

./: .gitignore  Dockerfile  README.md  createsuperuser.py  load_properties.py  manage.py  package-lock.json  package.json  pyproject.toml  scripts.py
JBA_ventures/: wsgi.py
JBA_ventures/settings/: base.py  dev.py  production.py
JBA_ventures/static/css/: JBA_ventures.css
JBA_ventures/static/js/: JBA_ventures.js
JBA_ventures/templates/: 404.html  base.html
home/: models.py
home/migrations/: 0001_initial.py  0003_homepage_hero_image_homepage_hero_text.py
home/templates/home/: home_page.html
home/templates/home/components/: header.html  pagination.html  search_form.html  tag_list.html
property/: apps.py  filters.py  models.py  signals.py
property/fixtures/: initial_data.json
property/migrations/: 0001_initial.py  0002_propertypage_bathrooms_propertypage_bedrooms_and_more.py  0003_propertypage_country_alter_propertypage_lga_and_more.py  0004_rename_lga_propertypage_district.py  0005_alter_propertypage_offer_alter_propertypage_size.py
property/templates/property/: property_page.html
property/templates/property/components/: media_carousel.html  no_property_card.html  property_card.html
search/: views.py
